# GoldBot

./: .env.example  .gitignore  AGENTS.md  Agent开发学习.md  CLAUDE.md  CONSENSUS.md  Cargo.toml  LICENSE  README.md  README_EN.md  agent_concepts.md
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: release.yml  update-formula.yml
Formula/: goldbot.rb
myskills/security-review/: SKILL.md
myskills/security-review/references/: security-review.md
myskills/ue5-shader/: SKILL.md
myskills/ue5-shader-plugin/: SKILL.md
myskills/ue5-shader-plugin/references/: compute-shader.md  global-shader.md  ray-tracing-shader.md
myskills/ue5-shader/templates/: compute-shader.md  pixel-shader.md  raytrace-shader.md
openspec/changes/conversation-compacted/: design.md  proposal.md  tasks.md
scripts/: install.ps1  install.sh
src/: cli.rs  main.rs  types.rs
src/agent/: dag.rs  executor.rs  loop.rs  main_agent.rs  mod.rs  plan.rs  provider.rs  provider_glm.rs  provider_kimi.rs  provider_minimax.rs  react.rs  roles.rs  step.rs  sub_agent.rs
src/agent/LLMProvider/: glm.rs  kimi.rs  mimo.rs  minimax.rs  mod.rs
src/app/: state.rs
src/consensus/: audit.rs  engine.rs  evaluate.rs  external.rs  mod.rs  model.rs  subagent.rs
src/memory/: compactor.rs  mod.rs  project.rs  session.rs  store.rs
src/session/: mod.rs  restore.rs  store.rs
src/tools/: command.rs  glob.rs  mcp.rs  mod.rs  safety.rs  search.rs  shell.rs  skills.rs  web_search.rs
src/tools/mcp/: config.rs  util.rs  (+6 more)
src/ui/: format.rs  ge.rs  input.rs  mod.rs  screen.rs  symbols.rs
(+8 files in other folders)
