[package]
name = "GoldBot"
version = "0.2.2"
edition = "2024"

[dependencies]
crossterm = "0.28"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", default-features = false, features = ["parse"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
unicode-width = "0.1"
